--- a/assets/scss/components/genre-styles.scss
+++ b/assets/scss/components/genre-styles.scss
@@ -1,4 +1,4 @@
-$brand-color: oColorsGetPaletteColor('warm-1');
+$brand-color: oColorsGetPaletteColor('wheat');
 
 .article--brand {
 
